[WFX-328] [WFX-329] Windows dark mode UI fixes.
* [WFX-328] Fix tabs toolbar and status bar colouring.
* [WFX-329] Ensure bottom positioned tabs toolbar hidden when in DOM fullscreen mode.

--- a/browser/extensions/extensibles/extension/css/tabfeatures.inc.css
+++ b/browser/extensions/extensibles/extension/css/tabfeatures.inc.css
@@ -4,7 +4,7 @@
       direction: ltr;
       mask-image: linear-gradient(to left, transparent, black var(--tab-label-mask-size));
     }
-    
+
     .tab-label-container[textoverflow][labeldirection=rtl],
     .tab-label-container[textoverflow]:not([labeldirection]):-moz-locale-dir(rtl) {
       direction: rtl;
@@ -33,4 +33,20 @@
     .tab-icon-overlay {
       margin-inline-end: 5.5px;
     }
+}
+
+%ifndef XP_MACOSX
+  /* Ensure that bottom positioned tabs are colored according to theme */
+  #browser-bottombox {
+    background-color: var(--lwt-accent-color);
+  }
+  /* Ensure that status bar colored according to theme */
+  #status-bar {
+    appearance: auto !important;
+  }
+%endif
+
+/* Ensure that bottom positioned tabs collapse when video's are fullscreen */
+:root[inDOMFullscreen] #browser-bottombox {
+  visibility: collapse;
 }
